# Blockwars30

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  Main.qml  README.md  WHEEL.db  WHEEL.md  WHEEL.sql  images.qrc  main.cpp  pool.cpp  pool.h  wheel.sh
engine/: AbstractGameItem.qml  GameDragAndSwapItem.qml  GameDragItem.qml  GameDropItem.qml  GameDynamicItem.qml  GameLayout.qml  GameScene.qml  GameSpriteSheetItem.qml  GameStateMachine.qml  GameStaticItem.qml
game/: AIGamePlayer.qml  BattleLoserScene.qml  BattleOutcomeScene.qml  BattleWinnerScene.qml  DebugScene.qml  MainMenuScene.qml  PowerupEditor.qml  SinglePlayerScene.qml  factory.js  layouts.js
game/data/: BattleGridStateMachine.qml  PowerupCardModel.qml  PowerupDatabase.qml  PowerupItem.qml
game/engine/: GameStateMachine.qml
game/scripts/: battlegrid.js
game/shaders/: explode.frag  explode.frag.qsb  explode.vert  explode.vert.qsb
game/ui/: BattleCardSidebar.qml  BattleGrid.qml  BattleGridHealthBar.qml  BattleQueueOrchestrator.qml  Block.qml  BlockExplodeParticles.qml  ExplodeEffect.qml  GameStateMachine.qml  GridCell.qml  GridColumn.qml  GridShakeEffector.qml  MatchSetup.qml  MenuButton.qml  PowerupCard.qml  PowerupCatalog.qml  PowerupHero.qml  PowerupIconSprite.qml  RelativeAreaSpecEditor.qml
